<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:onClick="btn_click"
        android:text="Go to 2nd activity" />
    <Button
        android:id="@+id/duqu"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:onClick="btn_sendmessage"
        android:layout_margin="10dp"
        android:text="send message" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="message" />
</LinearLayout>